dont remember really

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 .externalNativeBuild
 .cxx
 local.properties
+app/
+.git/
+gradle/
+build.gradle
+.gitignore
+gradle.properties
+gradlew
+gradlew.bat
+settings.gradle
+
